# MyMod

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MyMod.ini  QUICKSTART.md  README.md  _init_git.bat  build.bat  generate_sln.bat  install.bat
.github/workflows/: build.yml  release.yml
docs/: 01-h3api-integration.md
src/: config.cpp  config.h  hota_addresses.h  launcher.cpp  log.cpp  log.h  main.cpp  mymod_h3api.h  pattern.cpp  pattern.h
src/hooks/: hook_creature_color.cpp  hook_iat.cpp  hook_logic.cpp  hook_msgbox.cpp  hooks.h
tools/: ida_dump_funcs.idc  ida_dump_subfuncs.idc  ida_find_creature_data.idc  ida_find_creature_data.py  run_ida.bat  run_ida_verbose.bat  test_ida_batch.bat
